<resources>
    <string name="app_name">TREZOR Wallet</string>

    <string name="get_started">Get Started!</string>
    <string name="connect_trezor">Connect your TREZOR device</string>
    <string name="btn_continue">Continue</string>
    <string name="tx_unconfirmed">Unconfirmed</string>
    <string name="x_btc">%s BTC</string>
    <string name="total_received">Total Received: %s</string>
    <string name="balance">Balance</string>
    <string name="rate">Rate</string>
    <string name="received">Received</string>
    <string name="sent">Sent</string>
    <string name="previous_addresses">Previous Addresses</string>
    <string name="fresh_address">Fresh Address</string>
    <string name="more_addresses">More Addresses</string>
    <string name="bip32_path">BIP32 Path:</string>
    <string name="copy_to_clipboard">Copy to Clipboard</string>
    <string name="show_on_trezor">Show on TREZOR</string>
    <string name="account_x">Account #%d</string>
    <string name="legacy_account_x">Legacy Account #%d</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="address">Address</string>
    <string name="forget_device">Forget Device</string>
    <string name="legacy_accounts">Legacy Accounts</string>
    <string name="add_account">Add Account</string>
    <string name="add_legacy_account">Add Legacy Account</string>
    <string name="last_account_empty">To add a new account, the last account must have some transactions.</string>
    <string name="no_transactions">No transactions, yet.</string>
    <string name="hide_account">Hide this account</string>
    <string name="transaction">Transaction</string>
    <string name="hash">Hash</string>
    <string name="confirmed">Confirmed</string>
    <string name="in_block_x">In block #%s</string>
    <string name="show_on_web">Open Blockchain.info</string>
    <string name="sat_per_byte">%s sat/B</string>
    <string name="inputs">Inputs</string>
    <string name="outputs">Outputs</string>
    <string name="fee">Fee</string>
    <string name="fee_high">High</string>
    <string name="fee_normal">Normal</string>
    <string name="fee_economy">Economy</string>
    <string name="fee_low">Low</string>
    <string name="fee_custom">Custom</string>
    <string name="enable_labeling">Enable Labeling</string>
    <string name="disable_labeling">Disable Labeling</string>
    <string name="syncing">Synchronizing…</string>
    <string name="account_label">Account Label</string>
    <string name="address_label">Address Label</string>
    <string name="output_label">Output Label</string>
    <string name="unknown_address">Unknown Address</string>

    <!-- Send -->
    <string name="sending">Sending</string>
    <string name="please_wait">Please wait</string>
    <string name="transaction_sent">Transaction has been sent</string>
    <string name="sending_failed">Sending transaction failed</string>
    <string name="insufficient_funds">Insufficient funds</string>
    <string name="missing_address">Missing address</string>
    <string name="missing_amount">Missing amount</string>
    <string name="missing_fee">Missing fee</string>
    <string name="invalid_address">Invalid address</string>
    <string name="invalid_amount">Invalid amount</string>
    <string name="invalid_fee">Invalid fee</string>
</resources>
