<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:clipToPadding="false"
        android:clipChildren="false">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/hash"
            style="@style/TextAppearance.AppCompat.Subhead"/>

        <TextView
            android:id="@+id/txtHash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="4dp"
            tools:text="c2f6 3d31 a46d 7ed3 f160 b687 9530 d906 e42e 3a4e edd1 75f9 4468 e010 96a1 5e8a"/>

        <TextView
            android:id="@+id/txtConfirmed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/confirmed"
            style="@style/TextAppearance.AppCompat.Subhead"/>

        <TextView
            android:id="@+id/txtBlockTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="4dp"
            tools:text="30 October 2017, 10:34"/>

        <TextView
            android:id="@+id/txtBlockHeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            tools:text="In block #492318"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/inputs"
            style="@style/TextAppearance.AppCompat.Subhead"/>

        <LinearLayout
            android:id="@+id/inputs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            android:clipToPadding="false"
            android:clipChildren="false"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/outputs"
            style="@style/TextAppearance.AppCompat.Subhead"/>

        <LinearLayout
            android:id="@+id/outputs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            android:clipToPadding="false"
            android:clipChildren="false"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/fee"
            style="@style/TextAppearance.AppCompat.Subhead"/>

        <TextView
            android:id="@+id/txtFee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="4dp"
            tools:text="0.0001"/>

        <TextView
            android:id="@+id/txtFeePerByte"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            tools:text="10 sat/byte"/>
    </LinearLayout>
</ScrollView>