<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgQrCode"
            android:layout_width="250dp"
            android:layout_height="250dp"
            tools:background="@color/colorSecondary"/>

        <TextView
            android:id="@+id/txtAccountLabel"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Account #1"/>

        <TextView
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/bip32_path"/>

        <TextView
            android:id="@+id/txtAddressPath"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="m/44’/0’/0’/0/18"/>

        <TextView
            android:id="@+id/txtAddress"
            style="@style/TextAppearance.AppCompat.Body2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            tools:text="1FKrAcHbao8vG17NGb58W4ZCdfYQaTLcuX"/>

        <Button
            android:id="@+id/btnCopy"
            style="@style/AccentButton"
            android:layout_width="wrap_content"
            android:layout_marginTop="24dp"
            android:drawableStart="@drawable/ic_content_copy_white_24dp"
            android:text="@string/copy_to_clipboard"/>

        <Button
            android:id="@+id/btnShow"
            style="@style/AccentButton"
            android:layout_width="wrap_content"
            android:layout_marginBottom="24dp"
            android:drawableStart="@drawable/ic_remove_red_eye_white_24dp"
            android:text="@string/show_on_trezor"/>
    </LinearLayout>
</ScrollView>